bin/tests/lexer/errors/invalid_chars.swg
// ============================================================================
// Lexer Invalid Ok
// ============================================================================

// swc-option lex-only

// (vide)

¤ // swc-expected-error {{lex_err_invalid_char}}
